base href added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>ngx-animated-menu</title>
 		<!-- <base href="/angApp/"> -->
-		<base href="/ngx-animated-menu-demo" />
+		<base href="/srinivasanofficial.github.io/ngx-animated-menu-demo" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<style>
