--- a/index.html
+++ b/index.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" data-critters-container>
-	<head>
-		<meta charset="utf-8" />
-		<title>ngx-animated-menu</title>
-		<!-- <base href="/angApp/"> -->
-		<base
-			href="https://srinivasanofficial.github.io/ngx-animated-menu-demo/"
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<style>
-			body {
-				margin: 0;
-				padding: 0;
-				overflow-x: hidden;
-			}
-		</style>
-		<link
-			rel="stylesheet"
-			href="styles-LAPAYBR4.css"
-			media="print"
-			onload="this.media='all'"
-		/>
-		<noscript
-			><link rel="stylesheet" href="styles-LAPAYBR4.css"
-		/></noscript>
-	</head>
-	<body>
-		<app-root></app-root>
-		<script src="polyfills-RT5I6R6G.js" type="module"></script>
-		<script src="main-R7I33VGY.js" type="module"></script>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>ngx-animated-menu</title>
+    <!-- <base href="/angApp/"> -->
+    <base href="https://srinivasanofficial.github.io/ngx-animated-menu-demo/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>body{margin:0;padding:0;overflow-x:hidden}
+</style><link rel="stylesheet" href="styles-LAPAYBR4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-LAPAYBR4.css"></noscript></head>
+  <body>
+    <app-root></app-root>
+  <script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-G2DDRKEB.js" type="module"></script></body>
 </html>
